Fixed a bug with the titles being larger on mobile, and changed coming soon pictures.

--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -7,6 +7,7 @@
 		font-size: 2.475rem;	
 	}
 
+
 	&--zoom-effect:hover {
 		transform: scale(1.3);
 		transition: .3s;
@@ -23,8 +24,15 @@
 	&--centered--darkgrey {
 		text-align: center;
 		color: darkgrey;
-		font-size: 2rem;
+		font-size: 1.2rem;
 		font-weight: 700;
+
+		@mixin atSmall {
+			text-align: center;
+			color: darkgrey;
+			font-size: 2rem;
+			font-weight: 700;
+		}
 	}
 
 	&--centered--gold {
